[project]
name = "estimathon"
version = "0.1.0"
package-mode = false
description = "An estimathon run by M&T Board and sponsored by Bridgewater"
authors = [
    {name = "Roshan Bellary",email = "roshan.bellary@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "pymongo (>=4.12.0,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "streamlit-cookies-controller (>=0.0.4,<0.0.5)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
